provarAnt/00D1b0000000d5bEAA/objects/ATDSA_FOUR__MobileAppConfig__c.object
<CustomObject>
    <description>Configuration for DSA Mobile Application, colors, header, and background images</description>
    <fields>
        <fullName>ATDSA_FOUR__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if configuration is the actively used dsa mobile UI config</description>
        <label>Active Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ButtonDefaultAttachmentId__c</fullName>
        <description>Attachment Id to use for Default button state on main 2go dsa application screen</description>
        <label>Button Default Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ButtonHighlightAttachmentId__c</fullName>
        <description>Attachment Id to use for Highlighted/pressed button state in 2go dsa application</description>
        <label>Button Highlight Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ButtonHighlightTextColor__c</fullName>
        <defaultValue>&quot;333333&quot;</defaultValue>
        <description>Hex value for highlighted button text, default to dark grey (333333)</description>
        <label>Button Highlight Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ButtonTextAlpha__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Button Text Alpha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ButtonTextColor__c</fullName>
        <defaultValue>&quot;e5e5e5&quot;</defaultValue>
        <description>Hex value for text color to overlay label on button, defaults to white (e5e5e5)</description>
        <label>Button Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Check_In_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select the box to enable Check In capabilities to be able to track and rate documents</description>
        <label>Check In Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__IntroTextAlpha__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Alpha for intrductory text, defaults to 100</description>
        <label>Intro Text Alpha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__IntroTextColor__c</fullName>
        <defaultValue>&quot;870505&quot;</defaultValue>
        <description>Intro Text Color in Hex, defaults to white (870505)</description>
        <label>Intro Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__IntroText__c</fullName>
        <description>Introduction text for top of home screen</description>
        <label>Intro Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__LandscapeAttachmentId__c</fullName>
        <description>Attachment Id to use for Background Image in Landscape mode in 2go DSA for tablets</description>
        <label>Landscape Background Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__LinkToEditor__c</fullName>
        <formula>HYPERLINK(&quot;/apex/&quot; + IF(ISBLANK($Setup.ATDSA_FOUR__DSA_App_Setting__c.ATDSA_FOUR__Package_Name__c), &quot;&quot;, $Setup.ATDSA_FOUR__DSA_App_Setting__c.ATDSA_FOUR__Package_Name__c + &quot;__&quot;) + &quot;Configurator?id=&quot; &amp; Id ,Name,&apos;_self &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile App Configuration Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__LogoAttachmentId__c</fullName>
        <description>Attachment Id to use as header logo for 2go dsa app</description>
        <label>Logo Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__PortraitAttachmentId__c</fullName>
        <description>Attachment Id to use for Main App screen background Image in portrait mode</description>
        <label>Portrait Background Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ProfileText__c</fullName>
        <label>ProfileText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Profile_Names__c</fullName>
        <label>Profile Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Profiles__c</fullName>
        <label>Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>sample value</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Report_an_Issue__c</fullName>
        <description>Used in the configurator settings tab.</description>
        <label>Report an Issue</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__TitleBgAlpha__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Alpha for background, defaults to 100</description>
        <label>Title Background Alpha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__TitleBgColor__c</fullName>
        <defaultValue>&quot;333333&quot;</defaultValue>
        <description>Hex value for Title Bar BG Color, Default to dark grey (333333)</description>
        <label>Title Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__TitleTextAlpha__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Title Text Alpha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__TitleTextColor__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <description>Hex value for Title Text Color, defaults to white (FFFFFF)</description>
        <label>Title Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__TitleText__c</fullName>
        <description>Text for Home Screen Title Bar of Application</description>
        <label>Title Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__inEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if this record is already open for editing.</description>
        <label>inEdit</label>
        <type>Checkbox</type>
    </fields>
    <label>Mobile App Configuration</label>
    <nameField>
        <displayFormat>MAC-{00000000}</displayFormat>
        <label>Mobile App Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile App Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>